# op_uzduotis_2

./: .gitignore  CMakeLists.txt  README.md  install.sh  run.sh  windows-toolchain.cmake
docs/: Doxyfile
docs/html/: annotated.html  classStudentas-members.html  classStudentas.html  classStudentas__coll__graph.dot  classStudentas__inherit__graph.dot  classTimer-members.html  classTimer.html  classZmogus-members.html  classZmogus.html  classZmogus__inherit__graph.dot  classes.html  dir_285818956231a328456a5ae3d7081a7e.html  dir_285818956231a328456a5ae3d7081a7e_dep.dot  dir_3e7c53e95d7b9b1dfb6038560847b097.html  dir_3e7c53e95d7b9b1dfb6038560847b097_dep.dot  dir_4bec8a7f1ac7abe7fab28ba6438e3ea0.html  dir_4bec8a7f1ac7abe7fab28ba6438e3ea0_dep.dot  dir_665e1a30886da0ed2a40a79c6d63ef8c.html  dir_665e1a30886da0ed2a40a79c6d63ef8c_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_ab08bda033a805be3b438851b24437ac.html  dir_ab08bda033a805be3b438851b24437ac_dep.dot  dir_b7ac385aec3614fbb4bfcc289b9d5a0c.html  files.html  functions.html  functions_func.html  functions_rela.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherits.html  skaiciavimai_8h_source.html  studentas_8h_source.html  timer_8h_source.html  util_8h_source.html  zmogus_8h_source.html
docs/latex/: annotated.tex  classStudentas.tex  files.tex  (+13 more)
headers/: skaiciavimai.h  studentas.h  timer.h  util.h  zmogus.h
src/: main.cpp  skaiciavimai.cpp  stud_random.cpp  stud_rikiavimas.cpp  studentai.cpp  studentas_io.cpp  timer.cpp
(+12 files in other folders)
